objects/Vehicle_Interest__c.object
<CustomObject>
    <description>Information imported from Customer Visit spreadsheet.</description>
    <label>Vehicle Interest</label>
    <nameField>
        <label>Vehicle Interest</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minivan</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>Coupe</fullName>
                </value>
                <value>
                    <fullName>Wagon</fullName>
                </value>
                <value>
                    <fullName>Sedan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sunroof__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunroof</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <label>Exterior Color</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tan</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gray</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Purple</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X4_Wheel_Drive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4 Wheel Drive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Transmission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Transmission</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>